--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@splinetool/react-spline": "^4.1.0",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
