--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@splinetool/react-spline": "^4.1.0",
 		"bcryptjs": "^3.0.3",
 		"class-variance-authority": "^0.7.1",
+		"cloudinary": "^2.9.0",
 		"clsx": "^2.1.1",
 		"cookie": "^1.1.1",
 		"framer-motion": "^12.34.0",
@@ -30,6 +31,7 @@
 		"lucide-react": "^0.564.0",
 		"motion": "^12.34.0",
 		"next": "16.1.6",
+		"next-cloudinary": "^6.17.5",
 		"pg": "^8.18.0",
 		"prisma": "^7.4.0",
 		"radix-ui": "^1.4.3",
