--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"cloudinary": "^2.9.0",
 		"clsx": "^2.1.1",
 		"cookie": "^1.1.1",
+		"dotenv": "^17.3.1",
 		"framer-motion": "^12.34.0",
 		"google-auth-library": "^10.5.0",
 		"googleapis": "^171.4.0",
