--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"radix-ui": "^1.4.3",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
+		"recharts": "^3.7.0",
 		"simplex-noise": "^4.0.3",
 		"tailwind-merge": "^3.4.0",
 		"three": "^0.182.0"
