--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@react-three/drei": "^10.7.7",
 		"@react-three/fiber": "^9.5.0",
 		"@splinetool/react-spline": "^4.1.0",
+		"@yudiel/react-qr-scanner": "^2.5.1",
 		"bcryptjs": "^3.0.3",
 		"class-variance-authority": "^0.7.1",
 		"cloudinary": "^2.9.0",
@@ -33,6 +34,7 @@
 		"motion": "^12.34.0",
 		"next": "16.1.6",
 		"next-cloudinary": "^6.17.5",
+		"next-qrcode": "^2.5.1",
 		"pg": "^8.18.0",
 		"prisma": "^7.4.0",
 		"radix-ui": "^1.4.3",
