--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"clsx": "^2.1.1",
 		"cookie": "^1.1.1",
 		"dotenv": "^17.3.1",
+		"file-saver": "^2.0.5",
 		"framer-motion": "^12.34.0",
 		"google-auth-library": "^10.5.0",
 		"googleapis": "^171.4.0",
@@ -43,10 +44,12 @@
 		"recharts": "^3.7.0",
 		"simplex-noise": "^4.0.3",
 		"tailwind-merge": "^3.4.0",
-		"three": "^0.182.0"
+		"three": "^0.182.0",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
+		"@types/file-saver": "^2.0.7",
 		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "^20",
 		"@types/pg": "^8.16.0",
